--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-hash-link": "^1.0.1",
+    "react-hook-form": "^7.22.5",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
