--- a/package.json
+++ b/package.json
@@ -9,22 +9,29 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
     "@mui/styled-engine": "^5.2.6",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.32.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.0",
     "firebase": "^9.6.1",
     "history": "^5.2.0",
+    "mdbreact": "^5.2.0",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^2.1.0",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-hash-link": "^1.0.1",
     "react-hook-form": "^7.22.5",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
