--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@fullpage/react-fullpage": "^0.1.19",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
     "@mui/styled-engine": "^5.2.6",
@@ -21,6 +22,7 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
     "firebase": "^9.6.1",
+    "fullpage.js": "^3.1.2",
     "history": "^5.2.0",
     "mdbreact": "^5.2.0",
     "react": "^17.0.2",
@@ -28,6 +30,7 @@
     "react-bootstrap": "^2.1.0",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
+    "react-fullpage": "^0.1.19",
     "react-hash-link": "^1.0.1",
     "react-hook-form": "^7.22.5",
     "react-redux": "^7.2.6",
